--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -9,7 +9,7 @@
         "# Proyek Analisis Data: [Input Nama Dataset]\n",
         "- **Nama:** Prayuganingtyas Eka Saputri\n",
         "- **Email:** tsaputri086@gmail.com\n",
-        "- **ID Dicoding:** MC200D5X1243"
+        "- **ID Dicoding:** Prayuganingtyas Eka Saputri"
       ]
     },
     {
