--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -7690,7 +7690,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Menganalisis pelanggan berdasarkan Recency (R), Frequency (F), dan Monetary (M) untuk memahami pola pembelian mereka dan mengelompokkan mereka ke dalam segmen bisnis yang relevan."
+        "Menganalisis pelanggan berdasarkan Recency (R), Frequency (F), dan Monetary (M) untuk mengelompokkan pelanggan berdasarkan perilaku pembelian mereka—seberapa baru (recency), seberapa sering (frequency), dan seberapa besar nilai belanja mereka (monetary)—sehingga dapat mengidentifikasi segmen pelanggan yang paling bernilai, memahami pola belanja, serta menerapkan strategi pemasaran dan retensi yang lebih efektif."
       ],
       "metadata": {
         "id": "ipl9MCUh5Mem"
